SCH: Se cambiaron las resistencias del feedback, se limpiaron los comentarios. PCB: Se terminó de rutear. GITIGNORE: se agregó una línea

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ bom/*
 *.kicad_pcb-bak
 *.kicad_sch-bak
 _autosave-*
+*auto_saved_files#
 
 # Archivo que contiene configuración de Kicad en la computadora
 *.kicad_prl
